Getting ready for the first working version