@@ -1,18 +1,18 @@
-(defproject shovel "0.0.4"
+(defproject shovel "0.1.1"
   :description "Simple Kafka consumer and producer using core.async"
   :url "https://clojars.org/shovel"
   :license {:name " Apache License Version 2.0"
             :url "https://www.apache.org/licenses/LICENSE-2.0.txt"}
   :dependencies [
     ;kafka
-    [org.apache.kafka/kafka_2.10  "0.8.1.1"]
+    [org.apache.kafka/kafka_2.10  "0.8.2.0"]
     ;rest
     [org.clojure/clojure          "1.6.0"]
     [org.clojure/core.async       "0.1.303.0-886421-alpha"]
     [org.clojure/tools.cli        "0.3.1"]
     [org.clojure/tools.logging    "0.2.6"]
-    ;[com.google.guava/guava       "16.0" ]
-    [org.clojure/data.json        "0.2.4"]]
+    [org.clojure/data.json        "0.2.4"]
+    [metrics-clojure              "2.4.0"]]
   :exclusions [
     javax.mail/mail
     javax.jms/jms
@@ -26,7 +26,7 @@
     }
   }
   :jvm-opts [
-    "-Xms256m" "-Xmx512m" "-server" "-XX:MaxPermSize=128m"
+    "-Xms256m" "-Xmx512m" "-server"
     "-XX:NewRatio=2" "-XX:+UseConcMarkSweepGC"
     "-XX:+TieredCompilation" "-XX:+AggressiveOpts"
     "-Dcom.sun.management.jmxremote"
